Fix missing border in mobile menu.

--- a/style.css
+++ b/style.css
@@ -730,6 +730,9 @@ input:focus, textarea:focus, button:focus { outline: none }
   .solofolio-social {
     border-top: 1px solid rgba(0,0,0,0.1);
   }
+  .header {
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+  }
   .solofolio-social a {
     display: inline-block;
     line-height: 1.5rem;
